hanzo-dev/tui/tests/snapshots/vt100_chatwidget_snapshot__settings_help_overlay_section_closed.snap
---
source: tui/tests/vt100_chatwidget_snapshot.rs
expression: section_closed
---
 +Settings ▸ Model--------------------------------------------------------------------------------+
 |                                                                                                |
 | ›  Model              + Select Model & Reasoning --------------------------------------------+ |
 |    Theme              |                                                                      | |
 |    Updates            |  Current model: GPT-5.1-Codex-Max                                    | |
 |    Accounts           |  Reasoning effort: Medium                                            | |
 |    Agents             |                                                                      | |
 |    Prompts            |  GPT-5.1-Codex-Max                                                   | |
 |    Skills             |  Codex-optimized flagship for deep and fast reasoning.               | |
 |    Auto Drive         |     XHigh - Extra high reasoning depth for complex problems          | |
 |    Review             |     High - Maximizes reasoning depth for complex problems            | |
 |    Planning           |     Medium (current) - Balances speed and reasoning depth for everyd | |
 |    Validation         |     Low - Fast responses with lighter reasoning                      | |
 |    Chrome             |                                                                      | |
 |    MCP                |  GPT-5.2                                                             | |
 |    Notifications      |  Latest frontier model with improvements across knowledge, reasoning | |
 |    Limits             |     XHigh - Extra high reasoning depth for complex problems          | |
 |                       |                                                                      | |
 |                       +----------------------------------------------------------------------+ |
 | ↑ ↓ Move    Enter Open    Esc Close    ? Help                                                  |
 |                                                                                                |
 +------------------------------------------------------------------------------------------------+

  What can I code for you today?


 Plan Mode  (Shift+Tab change)   ? for shortcuts                                           API key
