hanzo-dev/tui/tests/snapshots/vt100_chatwidget_snapshot__settings_help_overlay_section_open.snap
---
source: tui/tests/vt100_chatwidget_snapshot.rs
expression: section_open
---
 +Settings ▸ Model--------------------------------------------------------------------------------+
 |                                                                                                |
 | ›  Model              + Select Model & Reasoning --------------------------------------------+ |
 |    Theme              |                                                                      | |
 |    Updates            |  Current model: GPT-5.1-Codex-Max                                    | |
 |    Accounts           |  Reasoning effort: Medium                                            | |
 |    Agents             |        +------------------------------+                              | |
 |    Prompts            |  GPT-5.|Model Shortcuts               |                              | |
 |    Skills             |  Codex-|                              |fast reasoning.               | |
 |    Auto Drive         |     XHi|• Esc    Return to overview   |for complex problems          | |
 |    Review             |     Hig|• Tab    Cycle sections       |r complex problems            | |
 |    Planning           |     Med|• Shift+Tab  Cycle backwards  |nd reasoning depth for everyd | |
 |    Validation         |     Low|• ?      Toggle this help     |easoning                      | |
 |    Chrome             |        |                              |                              | |
 |    MCP                |  GPT-5.|Press Esc to close            |                              | |
 |    Notifications      |  Latest+------------------------------+s across knowledge, reasoning | |
 |    Limits             |     XHigh - Extra high reasoning depth for complex problems          | |
 |                       |                                                                      | |
 |                       +----------------------------------------------------------------------+ |
 | ↑ ↓ Move    Enter Open    Esc Close    ? Help                                                  |
 |                                                                                                |
 +------------------------------------------------------------------------------------------------+

  What can I code for you today?


 Plan Mode  (Shift+Tab change)   ? for shortcuts                                           API key
