hanzo-dev/tui/tests/snapshots/vt100_chatwidget_snapshot__settings_overlay_overview_truncates.snap
---
source: tui/tests/vt100_chatwidget_snapshot.rs
expression: output
---
 +Settings ▸ Overview-------------------------------------+
 |                                                        |
 | › Model              Model: GPT-5.1-Codex-Max (Medium) |
 |   + Choose the language model used for new comp...     |
 |                                                        |
 |   Theme              Theme: Dark - Carbon (16-color... |
 |   + Switch between preset color palettes and ad...     |
 |                                                        |
 |   Updates            Auto update: Disabled             |
 |   + Control CLI auto-update cadence and release...     |
 |                                                        |
 | ↑ ↓ Move    Enter Open    Esc Close    ? Help          |
 |                                                        |
 +--------------------------------------------------------+

  What can I code for you today?


 Plan Mode  (Shift+Tab change)   ? for shortcuts   API key
