hanzo-dev/tui/tests/snapshots/vt100_chatwidget_snapshot__simple_conversation.snap
---
source: tui/tests/vt100_chatwidget_snapshot.rs
expression: output
---
   - Writing code
   - Reading files
   - Running commands


 › Can you help me understand the available commands?


   Hello! How can I help you today?



 • I can help with various tasks including:

   - Writing code
   - Reading files
   - Running commands


  What can I code for you today?


 Plan Mode  (Shift+Tab change)   ? for shortcuts                       API key
