hanzo-dev/tui/tests/snapshots/vt100_chatwidget_snapshot__strict_stream_ids_missing_id_warning.snap
---
source: tui/tests/vt100_chatwidget_snapshot.rs
expression: output
---
   - Writing code
   - Reading files
   - Running commands


 » Missing stream id for assistant answer delta

  What can I code for you today?


 Plan Mode  (Shift+Tab change)   ? for shortcuts                       API key
